Versión nueva de pagina web

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,11 +4,13 @@
     <link rel="stylesheet" href="CSS/estilos.css" />
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blog post</h1>
-    <p>Y este es el parrafo de inicio</p>
+    <div id="container">
+    <div id="post">
+    <h1>Este es el titulo del atractivo e interesante post</h1>
+    <p>Y este es el parrafo de inicio donde explicaremos las cosas increibles que pueden hacerse. </p>
 
-    </p>
-
+</div>
+</div>
 </body>
 
 </html>
