Finalizada la cabecera con diseño azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,8 +6,8 @@
 <body>
     <div id="container">
     <div id="cabecera">
-        Esto es la cabecera.
-    </div>
+        Hyperblog <span id="tagline">Tu blog de confianza</span>
+    </div> 
     <div id="post">
     <h1>Este es el titulo del atractivo e interesante post</h1>
     <p>Y este es el parrafo de inicio donde explicaremos las cosas increibles que pueden hacerse. </p>
