--- a/blogpost.html
+++ b/blogpost.html
@@ -6,13 +6,13 @@
 <body>
     <div id="container">
     <div id="cabecera">
-        Hyperblog <span id="tagline">Tu blog de confianza</span>
+        Hyperblog <span id="tagline">Tu blog de maestro</span>
     </div> 
     <div id="post">
     <h1>Este es el titulo del atractivo e interesante post</h1>
     <p>Y este es el parrafo de inicio donde explicaremos las cosas increibles que pueden hacerse. </p>
     <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube.Excepto si eres rockstar. Pero estadísticamente no lo eres ... por ahora</p>
-
+    <p>Subcribete y dale a LIKE</p>
 </div>
 </div>
 </body>
